# TimeTrace

./: .copilot-instructions.md  Dockerfile  README.md  app.py  filters.py  parsing.py  pyproject.toml  requirements.txt  sample.csv  test-report.txt  timeline.py
.github/hooks/: swarm-step-1.json  swarm-step-2.json  swarm-step-4.json
.github/workflows/: release_actions.yml
runs/swarm-2026-03-19T19-59-35-292Z/verification/: step-1-verification.md  step-2-verification.md  step-3-verification.md  step-4-verification.md  step-5-verification.md
tests/: __init__.py  conftest.py  test_filters.py  test_integration.py  test_parsing.py  test_timeline.py
