[project]
name = "timetrace"
version = "1.0.0"
description = "Lightweight Streamlit app to visualize time spent from log data entries"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["parsing", "filters", "timeline"]
omit = ["tests/*", "app.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80
